xmobar/xmobar.errors

xmobar.hs:1:1: error:
    Could not find module ‘Xmobar’
    There are files missing in the ‘xmobar-0.39’ package,
    try running 'ghc-pkg check'.
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
  |
1 | import Xmobar
  | ^^^^^^^^^^^^^
